--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 languageCode = "de"
 title = "Konfetti"
 theme = "konfetti"
-baseurl = "http://home.mnet-online.de/konfetti/"
+baseurl = "/"
 enableEmoji = true
 googleAnalytics = ""
 
