--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: home.mnet-online.de
-          local-dir: public/
+          local-dir: ./public/
           server-dir: konfetti/
           username: konfettiftp
           password: ${{ secrets.FTP_PASSWORD }}
