--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 languageCode = "de"
 title = "Konfetti"
 theme = "konfetti"
+baseurl = "http://home.mnet-online.de/konfetti/"
 enableEmoji = true
 googleAnalytics = ""
 
@@ -87,4 +88,3 @@ identifier = "highlight-menu"
 weight = 6
 name = "Impressum / Datenschutz"
 url = "/impressum"
-
