--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,9 @@ blog  = "/blog/:year/:month/:title/"
 [taxonomies]
 tags = "tags"
 
+[markup.goldmark.renderer]
+unsafe= true
+
 [[menu.main]]
 weight = 1
 name = "Über uns"
