--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           hugo-version: 0.81.0
 
       - name: 🔨 Build
-        run: hugo --environment production
+        run: hugo --environment production --minify
 
       - name: 🚢 Upload Site
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
