add new job posting

--- a/config.toml
+++ b/config.toml
@@ -74,6 +74,11 @@ weight = 4
 name = "Anmeldung"
 url = "/anmeldung"
 
+[[menu.main]]
+weight = 5
+name = "Offene Stellen"
+url = "/ueber-uns/stellenausschreibungen/"
+identifier = "highlight-menu"
 
 [[menu.main]]
 weight = 6
