fix name of Gravity job

--- a/.github/workflows/gravity.yaml
+++ b/.github/workflows/gravity.yaml
@@ -1,4 +1,4 @@
-name: Deploy Hugo site to Pages
+name: Catch size changes in production assets
 
 on:
   # Runs on pushes targeting the default branch
